# Trello_2_Monthly_CMake

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeSettings.json  README.md  Template.tex
CMake_Trello2Monthly/: CMakeLists.txt  CMake_Trello2Monthly.cpp  CMake_Trello2Monthly.h  monthly.cpp  monthly.h
